Removed lots of unused pages, "new" singlepage layout
- removed blog
- removed about
- made the header full width
- removed navigation
- footer links open i new tab
- small wording fixes
- updates plugins and jekyll
- removed travis

--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,8 @@ github_username:  rub1
 
 # Build settings
 markdown: kramdown
-exclude: [vendor]
+gems:
+  - jekyll-feed
+exclude:
+  - Gemfile
+  - Gemfile.lock
